# SomaAI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  todo.md
.github/workflows/: ci.yml  security.yml
docker/: Dockerfile  docker-compose.yml
docs/: api.md  architecture.md  features.md  roadmap.md
scripts/: debug_retrieval.py  seed_meta.py  test_rag_flow.py
src/somaai/: app.py  deps.py  exceptions.py  health.py  middleware.py  settings.py
src/somaai/api/: security.py
src/somaai/api/v1/: router.py
src/somaai/api/v1/endpoints/: actors.py  chat.py  chunked_upload.py  docs.py  feedback.py  ingest.py  meta.py  quiz.py  teacher.py
src/somaai/cache/: __init__.py  config.py  decorators.py  rag.py  semantic.py  session.py
src/somaai/contracts/: __init__.py  chat.py  common.py  docs.py  errors.py  feedback.py  jobs.py  meta.py  quiz.py  teacher.py
src/somaai/db/: crud.py  models.py  session.py
src/somaai/db/migrations/versions/: 05f04246113d_use_timezone_aware_timestamps.py
src/somaai/jobs/: __init__.py  decorators.py  queue.py  tasks.py  worker.py
src/somaai/modules/chat/: citations.py  memory.py  service.py
src/somaai/modules/docs/: __init__.py  service.py
src/somaai/modules/feedback/: __init__.py  service.py
src/somaai/modules/ingest/: pipeline.py  quality.py
src/somaai/modules/knowledge/: chunking.py  embeddings.py  vectorstore.py
src/somaai/modules/knowledge/stores/: chroma.py  pgvector.py  qdrant.py
src/somaai/modules/meta/: __init__.py  service.py
src/somaai/modules/quiz/: __init__.py  generator.py  pdf_export.py  service.py
src/somaai/modules/rag/: factory.py  generator.py  mock_data.py  mock_retriever.py  pipelines.py  prompts.py  reranker.py  retriever.py  schemas.py  types.py
src/somaai/modules/teacher/: __init__.py  service.py
src/somaai/modules/telemetry/: events.py
src/somaai/providers/: llm.py  storage.py  storage_gdrive.py  storage_local.py
src/somaai/tests/: conftest.py  test_actors.py  test_chat.py  test_feedback.py  test_meta.py  test_quiz.py
src/somaai/utils/: files.py  ids.py  observability.py  redis.py  retry.py  security.py  serialization.py
uploads/documents/2207bac0-9874-4e7f-822a-579b482ff37b/: test_document.txt
