[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somaai"
version = "0.1.0"
description = "SomaAI - Intelligent AI Assistant"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "SomaAI Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.22",
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.0",
    "aiofiles>=24.0.0",
    "groq>=1.0.0",
    "pymupdf>=1.26.7",
    "marker-pdf>=1.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
]
cache = [
    "redis>=5.0.0",
    "aiocache[redis]>=0.12.0",
    "gptcache>=0.1.40",
]
vectordb = [
    "qdrant-client>=1.7.0",
]
pdf = [
    "reportlab>=4.0.0",
    "python-docx>=1.0.0",
]
rag = [
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-qdrant>=0.2.0",
    "langchain-huggingface>=0.0.3",
    "langchain-text-splitters>=0.3.0",
    # Document processing
    "pypdf>=4.0.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "docx2txt>=0.8",
    # TODO (Post-MVP): Uncomment for cross-encoder reranking
    # Requires PyTorch (~873MB) + CUDA libs (~2.6GB) = ~3.5GB total
    "sentence-transformers>=3.0.0",
    "groq>=0.4.0",
]
tasks = [
    # Async task queue
    "arq>=0.26.0",
]
scale = [
    # Scalability improvements
    "aioitertools>=0.12.0",      # Async batch processing
    "prometheus-fastapi-instrumentator>=7.0.0",  # Metrics
    "slowapi>=0.1.9",            # Rate limiting
]
all = [
    "somaai[cache,vectordb,pdf,rag,tasks,scale]",
]

[project.urls]
Homepage = "https://github.com/Rwanda-AI-Network/SomaAI"
Repository = "https://github.com/Rwanda-AI-Network/SomaAI"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["src/somaai/db/migrations/versions/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
# Relaxed for stub implementations - enable strict when implementing
strict = false
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
# Allow stub implementations with pass
disable_error_code = ["empty-body", "union-attr"]

[[tool.mypy.overrides]]
module = "somaai.tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/somaai/tests"]
